# Zero-Employee-Orchestrator

./: .dockerignore  .env.example  .gitattributes  .gitignore  .trivyignore  ABOUT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude_Code_指示文.md  Claude_Code_指示文.txt  CommandWeave.md  CommandWeave_augmented.md  CommandWeave_complete_final.md  CommandWeave_機能一覧_改善案_要望まとめ_整理版.md  CommandWeave_機能一覧_改善案_要望まとめ_追記版.md  CommandWeave完全版.md  CommandWeave完全版_完全包含版.md  DESIGN.md  DESIGN_v11.md  DEVELOPER_SETUP.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  MASTER_GUIDE.md  PRIVACY_POLICY.md  Progressive.md  README (6).md  README.md  RELEASE_NOTES_DRAFT.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md  USER_SETUP.md  ZPCOS_FEATURES_AND_IMPROVEMENTS.md  Zero-Employee Orchestrator-augmented.md  Zero-Employee Orchestrator.md  construction-engineer.md  docker-compose.yml  (+13 more)
apps/api/: alembic.ini  model_catalog.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_add_provider_override.py  002_add_heartbeat_policy_fields.py  003_add_company_setup_completed.py  004_plan_proposals_and_autonomy_overrides.py
apps/api/app/: __init__.py  banner.py  cli.py  main.py
apps/api/app/audit/: logger.py
apps/api/app/core/: config.py  config_manager.py  database.py  i18n.py  logging_config.py  rate_limit.py  security.py  version_check.py  version_migration.py
apps/api/app/heartbeat/: scheduler.py
apps/api/app/integrations/: __init__.py  ai_investigator.py  ai_tools.py  app_connector.py  artifact_export.py  browser_assist.py  cloud_native.py  external_skills.py  ipaas.py  mcp_server.py  media_generation.py  obsidian.py  repurpose_engine.py  rss_tos_monitor.py  sentry_integration.py  smart_device.py
apps/api/app/models/: __init__.py  agent.py  artifact.py  audit.py  autonomy_override.py  budget.py  company.py  connection.py  heartbeat.py  organization.py  plan.py  policy.py  project.py  review.py  skill.py  spec.py  task.py  ticket.py  user.py
apps/api/app/orchestration/: __init__.py  a2a_communication.py  agent_communication.py  agent_session.py  artifact_bridge.py  avatar_coevolution.py  cost_guard.py  dag.py  execution_monitor.py  executor.py  experience_memory.py  failure_taxonomy.py  hypothesis_engine.py  interview.py  judge.py  knowledge_refresh.py  knowledge_store.py  longrun_scheduler.py  meta_skills.py  quality_sla.py  reasoning_trace.py  repropose.py  state_machine.py  transparency.py  vector_store.py
apps/api/app/policies/: approval_gate.py  autonomy_boundary.py
apps/api/app/providers/: __init__.py  g4f_provider.py  gateway.py  local_rag.py  model_registry.py  ollama_integration.py  ollama_provider.py  web_session_provider.py
apps/api/app/repositories/: audit_repository.py  base.py  ticket_repository.py
apps/api/app/schemas/: __init__.py  agent.py  approval.py  artifact.py  audit.py  auth.py  budget.py  common.py  company.py  heartbeat.py  judgment_review.py  organization.py  plan_quality.py  prerequisite_monitor.py  project.py  registry.py  self_improvement.py  settings.py  spec_contradiction.py  spec_plan.py  task_replay.py  ticket.py
apps/api/app/security/: data_protection.py  iam.py  input_sanitization.py  pii_guard.py  prompt_guard.py  redteam.py  sandbox.py  sanitizer.py  secret_manager.py  security_headers.py  workspace_isolation.py
apps/api/app/services/: __init__.py  agent_org_service.py  agent_service.py  approval_service.py  auth_service.py  budget_service.py  context_engine_service.py  governance_service.py  judgment_review_service.py  marketplace_service.py  multi_model_service.py  nl_command_service.py  org_generator_service.py  plan_quality_service.py  plugin_loader.py  plugin_registry.json  plugin_skill_loader.py  prerequisite_monitor_service.py  registry_service.py  resource_import_service.py  secretary_service.py  self_improvement_models.py  self_improvement_service.py  skill_service.py  spec_contradiction_service.py  task_replay_service.py  task_service.py  team_service.py  ticket_service.py  user_input_service.py  wiki_knowledge_service.py
apps/api/app/tests/: conftest.py  test_a2a_communication.py  test_ab_test_safety.py  test_agent_adapters.py  test_agent_org_service.py  test_alembic_stamp.py  test_approval_service.py  test_audit_logger.py  test_auth.py  test_auth_service.py  test_autonomy_dial.py  test_browser_adapter.py  test_budget_service.py  test_chaos_dag.py  test_companies.py  test_competitive_parity.py  test_context_engine_service.py  test_cost_guard.py  test_dispatch.py  test_e2e_framework.py  test_e2e_ticket_execution.py  test_failure_taxonomy.py  test_governance_service.py  test_health.py  test_hyperagent_comet_adapters.py  test_i18n_accept_language.py  test_iam.py  test_json_parser.py  test_judge.py  test_language_switching.py  test_marketplace_service.py  test_mcp_server.py  test_ollama_integration.py  test_ollama_provider.py  test_pii_guard.py  test_plans_proposals.py  test_plugin_registry.py  test_plugin_skill_loader.py  test_prompt_guard.py  test_provider_selection.py  (+22 more)
apps/api/app/tools/: agent_adapter.py  browser_adapter.py  browser_automation.py  connector.py  llm_mock.py  lsp_integration.py
apps/api/app/utils/: __init__.py  json_parser.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: hooks.nsh
apps/desktop/src-tauri/src/: lib.rs  main.rs
zpcos/backend/: pyproject.toml
zpcos/backend/app/: main.py
zpcos/backend/app/auth/: __init__.py  authhub.py  google_oauth.py  openrouter_oauth.py  token_store.py
zpcos/backend/app/engine/: __init__.py  skill_generator.py
zpcos/backend/scripts/: build_sidecar.ps1
zpcos/backend/tests/: conftest.py  test_artifact_bridge.py  test_cost_guard.py  test_experience.py  test_failure.py  test_gap_detector.py  test_local_context.py  test_policy.py  test_pre_check.py  test_quality_sla.py  test_self_healing.py  test_skill_framework.py  test_skill_registry.py  test_state_machine.py  test_token_store.py  test_webhook.py
(+440 files in other folders)
