# Root-level convenience wrapper.
# The actual package lives in apps/api/.
# Install directly:  pip install apps/api/
# Or from repo root: pip install .
[project]
name = "zero-employee-orchestrator"
version = "0.1.0"
description = "Zero-Employee Orchestrator – AI業務オーケストレーション基盤"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "litellm>=1.60",
    "python-jose[cryptography]>=3.3",
    "cryptography>=44",
    "bcrypt>=4.0",
    "slowapi>=0.1.9",
    "httpx>=0.28",
    "websockets>=12.0",
    "apscheduler>=3.10",
    "structlog>=24.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
zero-employee = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/app"]
