[project]
name = "zero-employee-orchestrator"
version = "0.1.0"
description = "Zero-Employee Orchestrator – AI Orchestration Platform for multi-agent business automation with human approval and full auditability"
requires-python = ">=3.12"
license = "MIT"
readme = "../../README.md"
keywords = [
    "ai",
    "orchestrator",
    "multi-agent",
    "automation",
    "llm",
    "fastapi",
    "ollama",
    "business-automation",
]
authors = [
    { name = "OrosiTororo" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "litellm>=1.60",
    "python-jose[cryptography]>=3.3",
    "cryptography>=44",
    "bcrypt>=4.0",
    "slowapi>=0.1.9",
    "httpx>=0.28",
    "websockets>=12.0",
    "apscheduler>=3.10",
    "structlog>=24.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/OrosiTororo/Zero-Employee-Orchestrator"
Repository = "https://github.com/OrosiTororo/Zero-Employee-Orchestrator"
Issues = "https://github.com/OrosiTororo/Zero-Employee-Orchestrator/issues"

[project.scripts]
zero-employee = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    # FastAPI uses Depends() / Query() / Body() as default arguments — intentional
    "B008",
    # StrEnum was introduced in Python 3.11; UP042 suggests it but we target 3.12+
    # keeping str+Enum pattern for broader compatibility in the interim
    "UP042",
    # Line-length violations in generated/test files are acceptable
    "E501",
    # raise-without-from-inside-except: broad suppression while codebase matures
    "B904",
    # Simplification suggestions — style preferences, not correctness issues
    "SIM105",
    "SIM102",
    "SIM117",
    "SIM108",
    "SIM110",
    # non-pep695-generic-class: PEP 695 syntax not yet used project-wide
    "UP046",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
