[project]
name = "zero-employee-orchestrator"
version = "0.1.7"
description = "Zero-Employee Orchestrator – AI Orchestration Platform for multi-agent business automation with human approval and full auditability"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "ai",
    "orchestrator",
    "multi-agent",
    "automation",
    "llm",
    "fastapi",
    "ollama",
    "business-automation",
]
authors = [
    { name = "OrosiTororo" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "litellm>=1.60,!=1.82.7,!=1.82.8",
    "aiohttp>=3.13.4",
    "python-jose[cryptography]>=3.3",
    "cryptography>=46.0.6",
    "bcrypt>=4.0",
    "slowapi>=0.1.9",
    "httpx>=0.28",
    "websockets>=12.0",
    "apscheduler>=3.10",
    "structlog>=24.0",
    "python-multipart>=0.0.9",
    "packaging>=23.0",
]

[project.optional-dependencies]
monitoring = [
    "sentry-sdk[fastapi]>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/OrosiTororo/Zero-Employee-Orchestrator"
Repository = "https://github.com/OrosiTororo/Zero-Employee-Orchestrator"
Issues = "https://github.com/OrosiTororo/Zero-Employee-Orchestrator/issues"
Documentation = "https://github.com/OrosiTororo/Zero-Employee-Orchestrator/tree/master/docs"

[project.scripts]
zero-employee = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
# Line length is 120 rather than the stricter 100 to accommodate Japanese
# log strings and long manifest literals that are harder to wrap readably.
# New code is expected to stay within 100 where reasonable; the lint stays
# silent up to 120 so small overruns do not block the CI.
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "B008",
    "UP042",
    "B904",
    "SIM105",
    "SIM102",
    "SIM117",
    "SIM108",
    "SIM110",
    "UP046",
]

[tool.ruff.lint.per-file-ignores]
# Modules dominated by Japanese strings / large manifests where wrapping
# hurts readability. Revisit when these files are split in a future refactor.
"app/banner.py" = ["E501"]
"app/services/plugin_loader.py" = ["E501"]
"app/services/wiki_knowledge_service.py" = ["E501"]
"app/services/context_engine_service.py" = ["E501"]
"app/services/self_improvement_service.py" = ["E501"]
"app/services/agent_org_service.py" = ["E501"]
"app/services/org_generator_service.py" = ["E501"]
"app/services/judgment_review_service.py" = ["E501"]
"app/services/nl_command_service.py" = ["E501"]
"app/services/plan_quality_service.py" = ["E501"]
"app/integrations/browser_assist.py" = ["E501"]
"app/security/prompt_guard.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
python_version = "3.12"
strict = true