[project]
name = "zpcos-backend"
version = "0.1.0"
description = "ZPCOS — Zero-Prompt Cross-model Orchestration System Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "litellm>=1.55.0",
    "pydantic>=2.10.0",
    "transitions>=0.9.2",
    "aiosqlite>=0.20.0",
    "keyring>=25.5.0",
    "cryptography>=44.0.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.155.0",
    "httpx>=0.28.0",
    "pyinstaller>=6.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
