[package]
name = "zero-employee-orchestrator"
version = "0.1.4"
description = "Zero-Employee Orchestrator - AI Business Orchestration Platform"
authors = ["Zero-Employee Orchestrator Team"]
edition = "2021"

[lib]
name = "zero_employee_orchestrator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
